# NeuralNetworks

./: AddGate.py  Circuit.py  Edge.py  MultiplyGate.py  NeuralNet.py  SVM.py  SigmoidGate.py  checkModel.py  driver.py  mnist_loader.py  test.py
NeuralNetsCPP/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  tests
NeuralNetsCPP/net/: NeuralNet.cpp  NeuralNet.cpp~  NeuralNet.h  NeuralNet.h~
NeuralNetsCPP/perceptron/: Perceptron.cpp  Perceptron.cpp~  Perceptron.h  Perceptron.h~
NeuralNetsCPP/testing/: net_test.cpp  net_test.cpp~  net_test.h  net_test.h~  perceptron_test.cpp  perceptron_test.h  tests.cc
NeuralNetsCPP/vectoroperations/: VectorOperations.h
